--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@
 
 .res-card {
 	margin: 5px;
-	width: 200px;
-	height: 300px;
+	width: 15em;
 	padding: 10px;
 }
 
@@ -44,6 +43,12 @@
 .search {
 	border: 1px solid black;
 	padding: 10px;
+}
+
+.body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .res-logo {
