--- a/style.css
+++ b/style.css
@@ -35,26 +35,6 @@ body {
 	list-style: none;
 }
 
-.res-card {
-	margin: 5px;
-	width: 15em;
-	padding: 10px;
-}
-
-.res-card:hover {
-	cursor: pointer;
-	border: 1px solid black;
-	box-shadow: 5px 5px 5px rgb(130, 83, 83);
-}
-.res-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding-top: 20px;
-	gap: 20px;
-	background-color: #9f7d7d;
-}
-
 .search {
 	border: 1px solid black;
 	padding: 10px;
@@ -90,8 +70,33 @@ body {
 	background-color: #f9f9f9;
 }
 
+.res-card {
+	margin: 5px;
+	width: 15em;
+	height: 22em;
+	padding: 10px;
+	border-radius: 8px;
+}
+
+.res-card:hover {
+	cursor: pointer;
+	border: 1px solid black;
+	box-shadow: 5px 5px 5px rgb(130, 83, 83);
+}
+.res-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-top: 20px;
+	gap: 15px;
+	background-color: #9f7d7d;
+}
+
 .res-logo {
 	width: 100%;
+	height: 180px;
+	object-fit: cover;
+	border-radius: 8px;
 }
 
 .res-card > .info {
@@ -106,6 +111,14 @@ body {
 	font-size: 25px;
 	font-weight: 600;
 	margin-bottom: 10px;
+}
+
+.rate-time {
+	display: flex;
+	font-weight: 600;
+	padding-top: 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	justify-content: space-between;
 }
 
 .info span:nth-last-child(-n + 3) {
@@ -164,4 +177,10 @@ a {
 
 a:active {
 	color: rgb(136, 136, 138);
+}
+
+.user-card {
+	padding: 20px;
+	border: 1px solid black;
+	margin: 10px;
 }
